# UniversityWork

Anul 1/sem 2/BD/proiect/: 132_Bratan_AlexandraMaria-creare_inserare.txt  132_Bratan_AlexandraMaria-exemple.txt  BDproject.docx
Anul 1/sem 2/POO/: CMakeLists.txt  main.cpp
Anul 1/sem 2/POO/Colocviu 2024/: Item.h  Robot.cpp  Robot.h  Turn.h  Zid.h
Anul 1/sem 2/POO/Colocviu2021sub01/: CMakeLists.txt  main.cpp
Anul 1/sem 2/POO/Colocviu2023/: main.cpp
Anul 1/sem 2/POO/Colocviu2024iulie/: CMakeLists.txt  Item.cpp  Robot.cpp  Turn.cpp  Zid.cpp  main.cpp
Anul 1/sem 2/POO/Colocviu2025info/: Angajat.cpp  Angajat.h  Bautura.cpp  Bautura.h  Bucatar.cpp  Bucatar.h  Burger.cpp  Burger.h  CMakeLists.txt  Casier.cpp  Casier.h  Comanda.cpp  Comanda.h  Desert.cpp  Desert.h  Livrator.cpp  Livrator.h  Produs.cpp  Produs.h  Simulator.cpp  Simulator.h  main.cpp
Anul 1/sem 2/POO/Colocviu2026/: CMakeLists.txt  main.cpp
Anul 1/sem 2/POO/Colocviu2026Info/: 132_Bratan_AlexandraMaria.cpp
Anul 1/sem 2/POO/uPOOcolocviu2025cti/: CMakeLists.txt  main.cpp
