cmake_minimum_required(VERSION 4.2)
project(Colocviu2025info)

set(CMAKE_CXX_STANDARD 20)

add_executable(Colocviu2025info main.cpp
        Produs.h
        Produs.cpp
        Bautura.h
        Bautura.cpp
        Desert.h
        Desert.cpp
        Burger.h
        Burger.cpp
        Angajat.h
        Angajat.cpp
        Casier.h
        Casier.cpp
        Livrator.h
        Livrator.cpp
        Bucatar.h
        Bucatar.cpp
        Comanda.h
        Comanda.cpp
        Simulator.h
        Simulator.cpp)
